crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__tags__I099-tags.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/tags/I099-tags
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "This is the content\n" #author: Joe #title: My Great Story [Done]
outcome: Done
