crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__tags__I100-tags-on-choice.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/tags/I100-tags-on-choice
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "Start of choice text Choice only text" (0) -> 0]
> "Start of choice text This is after the choice is taken\n" #tag both #post choice tag [Ended]
outcome: Ended
