crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__tags__tagsInChoice.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/tags/tagsInChoice
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "one two" (0) -> 0]
> "one three" #one #three [Ended]
outcome: Ended
