crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__tags__tagsInSeq.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/tags/tagsInSeq
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "A red sequence.\n" #red [Continue]
> "A white sequence.\n" #white [Done]
outcome: Done
